--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-logging-1.1.3.jar=lib\\commons-logging-1.1.3.jar
 file.reference.commons-logging-api-1.1.jar=lib\\commons-logging-api-1.1.jar
-file.reference.ojdbc14-10.2.0.4.0.jar=lib\\ojdbc14-10.2.0.4.0.jar
+file.reference.struts2-spring-plugin-2.3.16.3.jar=lib\\struts2-spring-plugin-2.3.16.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +44,8 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.3.jar}:\
     ${file.reference.commons-logging-api-1.1.jar}:\
     ${libs.spring-framework300.classpath}:\
-    ${file.reference.ojdbc14-10.2.0.4.0.jar}
+    ${file.reference.struts2-spring-plugin-2.3.16.3.jar}:\
+    ${libs.javaee-endorsed-api-6.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
